--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,7 @@
-version: '3.8'
-
 services:
-  daily-discipline:
-    build:
-      context: .
-      args:
-        API_KEY: ${API_KEY}
-    container_name: daily-discipline
-    restart: unless-stopped
+  web:
+    build: .
     ports:
-      - "3001:80"  # Change 3001 to your preferred port
-    networks:
-      - webnet
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.daily-discipline.rule=Host(`discipline.yourdomain.com`)"
-      - "traefik.http.services.daily-discipline.loadbalancer.server.port=80"
-
-networks:
-  webnet:
-    external: true
+      - "80:80"
+    restart: always
+    container_name: daily-discipline
