--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          TOGETHER_API_KEY: ${{ secrets.TOGETHER_API_KEY }}
+          VITE_TOGETHER_API_KEY: ${{ secrets.TOGETHER_API_KEY }}
 
       - name: Deploy Frontend to VPS
         uses: appleboy/scp-action@v0.1.7
